--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,55 @@
     box-sizing: border-box;
 }
 
-.main {
+
+body {
     height: 100vh;
     width: 100vw;
-    font-family: 'league spartan';
-    background: linear-gradient(130deg, rgba(88, 192, 218, 0.849), rgba(255, 217, 0, 0.751));
+    background: indianred;
+}
+
+.main {
+    /* margin: 10px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+    margin: 0 0 20px 0;
+    font-family: 'nova';
+    font-size: 2rem;
+    letter-spacing: 6px;
+    display: table;
+}
+
+.nav {
+    width: 90vw;
+    position: sticky;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+a {
+    width: inherit;
+    text-align: center;
+    font-family: 'tr larabiefont';
+    padding: 12px;
+    margin: 0;
+    font-size: 1.6rem;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+    border-radius: 2px;
+    text-decoration: none;
+    color: #333;
+}
+
+a:hover {
+    color: orange;
+    padding: auto;
+    margin: 0;
+    transform: scale(1.5);
+    border: none;
+    transition: transform 0.2s ease-out;
 }
