--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,19 @@
 }
 
 body {
+    overflow-x: hidden;
     font-family: 'graphik', sans-serif;
     /* height: 100vh; */
+    background: linear-gradient(75deg, silver, cornsilk, azure, cornsilk, silver);
     width: 100vw;
-    background: linear-gradient(silver, #BABBBB, cornsilk);
-
+    scroll-behavior: smooth scroll;
 }
 
 
 
 /* NAV */
 .nav {
+    width: 100vw;
     letter-spacing: 2px;
     display: flex;
     justify-content: space-around;
@@ -80,7 +82,7 @@ body {
     height: 60vh;
     width: 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .leftSection {
@@ -106,15 +108,15 @@ body {
     height: 80vh;
     margin: 60px auto;
     position: relative;
-    width: 60vw;
+    width: 80vw;
 }
 
 .CV {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     transition: all 0.5s;
 }
 
@@ -250,20 +252,108 @@ body {
 
 /* contact-me */
 .cta-btn {
-    text-align: center;
+    display: flex;
     border: transparent;
     background: transparent;
     outline: transparent;
     border-radius: 12px;
+    margin: auto;
+    cursor: pointer;
+    font-family: monospace;
+}
+
+.cta-btn .heading {
+    padding: 5px;
+    font-family: 'cascadia code';
 }
 
 .cta-btn:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(255, 177, 177, 0.4);
+    transform: scale(1.1);
+    transition: transform 0.2s ease-out;
+}
+
+.model-container {
+    background-color: rgba(0, 0, 0, 0.6);
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.model {
+    background-color: whitesmoke;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    width: 500px;
+}
+
+.model-content {
+    padding: 20px;
+}
+
+.model-form div {
+    margin: 20px 0;
+}
+
+.model-form label {
+    display: block;
+    margin-bottom: 6px;
+}
+
+.model-form .form-input {
+    border-radius: 4px;
+    border: transparent;
+    padding: 8px;
+    width: 100%;
+}
+
+.close-btn {
+    background: transparent;
+    font-family: 'komika title';
+    border: none;
+    font-size: 25px;
+    position: absolute;
+    top: 5px;
+    right: 12px;
+    cursor: pointer;
+}
+
+.model-container .submit-btn {
+    padding: 10px 30px;
+    font-weight: bold;
+    background: indianred;
+    border: none;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+
+/* Javascript */
+.model-container.show-model {
+    display: block;
+}
+
+
+.footer {
+    margin: 30px auto 0;
+    height: 40vh;
+    width: 100%;
+    background: #444;
 }
 
 /* UTILITY */
 .heading {
     font-size: 3rem;
+    text-align: center;
     padding: 0;
     width: 20vw;
     margin: auto;
@@ -296,6 +386,7 @@ body {
     background: brown;
     border-radius: 20px;
     border: none;
+    display: flex;
 }
 
 .line1 {
@@ -312,4 +403,30 @@ body {
     background: blue;
     border-radius: 20px;
     border-color: blue;
+}
+
+
+
+/* to-top-buttin */
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: #333;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-family: 'damn noisy kids';
+}
+
+#myBtn:hover {
+    background-color: transparent;
+    color: black;
+    transform: scale(2);
 }
