--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,17 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
 body {
     overflow-x: hidden;
     font-family: 'graphik', sans-serif;
     /* height: 100vh; */
     background: linear-gradient(75deg, silver, cornsilk, azure, cornsilk, silver);
     width: 100vw;
-    scroll-behavior: smooth scroll;
 }
 
 
@@ -267,6 +271,20 @@ body {
     font-family: 'cascadia code';
 }
 
+.cta-btn::before {
+    content: "<—";
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+}
+
+.cta-btn::after {
+    content: "—>";
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+}
+
 .cta-btn:hover {
     background: rgba(255, 177, 177, 0.4);
     transform: scale(1.1);
@@ -336,19 +354,54 @@ body {
     cursor: pointer;
 }
 
-
 /* Javascript */
 .model-container.show-model {
     display: block;
 }
 
 
+/* footer */
 .footer {
-    margin: 30px auto 0;
-    height: 40vh;
-    width: 100%;
-    background: #444;
+    padding: 0;
+    margin: 20px auto 0;
+    height: 30vh;
+    width: 90%;
+    /* background: #444; */
+    font-family: monospace;
+    display: flex;
+    justify-content: space-between;
 }
+
+.footer .footer-h2 {
+    display: flex;
+    align-items: center;
+    margin: 20px 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.8rem;
+    border-right: 4px outset midnightblue;
+    border-radius: 2px;
+    padding: 0 20px;
+}
+
+.footer .footer-ul {
+    display: flex;
+    flex-direction: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer .footer-icon {
+    width: 50px;
+    height: 50px;
+}
+
+.footer .footer-li {
+    margin: 30px;
+    /* font-size: 1.6rem; */
+    list-style: none;
+
+}
+
 
 /* UTILITY */
 .heading {
