--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 body {
     font-family: 'graphik', sans-serif;
     /* height: 100vh; */
-    background: linear-gradient(75deg, silver, cornsilk, azure, cornsilk, silver);
+    background: hsl(182, 100%, 80%);
     width: 100vw;
 }
 
@@ -90,17 +90,20 @@ body {
 }
 
 .leftSection {
+    margin: fit-content;
     align-items: center;
     color: black;
     display: flex;
-    flex-flow: wrap;
+    flex-direction: column nowrap;
     font-family: 'tr larabiefont', sans-serif;
-    font-size: 3rem;
+    font-size: 2.8rem;
     width: 45vw;
+    padding: 0;
 }
 
 .rightSection {
     display: flex;
+    justify-content: flex-end;
     width: 30vw;
 }
 
@@ -428,7 +431,7 @@ body {
 }
 
 .dev {
-    font-size: 4rem;
+    font-size: 3.6rem;
     font-style: italic;
     color: chocolate
 }
