--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
     margin-bottom: 0;
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 3rem;
 }
 
 .top-btn1,
@@ -139,7 +139,50 @@ body {
     font-weight: bolder;
     margin: auto;
     text-transform: uppercase;
+    position: relative;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+}
+
+.top-btn1:before,
+.top-btn2:before {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: -8px;
+    left: -8px;
+    /* background: white; */
+    border-top: 2px inset gold;
+    border-left: 2px inset orange;
+    border-radius: 2px;
+    transition: all 0.25s;
+}
+
+.top-btn1:hover::before,
+.top-btn2:hover::before {
+    height: 100%;
+    width: 100%;
+}
+
+.top-btn1::after,
+.top-btn2::after {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    right: -8px;
+    bottom: -8px;
+    /* background: white; */
+    border-bottom: 2px inset gold;
+    border-right: 2px inset orange;
+    border-radius: 2px;
+    transition: all 0.25s;
+}
+
+.top-btn1:hover::after,
+.top-btn2:hover::after {
+    width: 100%;
+    height: 100%;
 }
 
 .top-btn1:hover,
