--- a/style.css
+++ b/style.css
@@ -256,7 +256,84 @@ span {
 
 
 /* DETAILS */
-.details .container .btnBG {
+.about-details {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: url(bg.png) center center/cover no-repeat;
+    font-family: 'tr larabiefont';
+}
+
+.about-details .container {
+    width: 88vw;
+    height: 88vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 70px auto;
+    padding: auto 2rem;
+}
+
+.about-details h1 {
+    display: flex;
+    letter-spacing: 4px;
+    font-size: 5rem;
+    color: #ff6a00
+}
+
+.about-details h2 {
+    margin-bottom: 20rem;
+    color: #999;
+    font-size: 3rem;
+}
+
+.about-details .container .img {
+    width: 90vw;
+    height: 30vh;
+    position: fixed;
+    top: 30%;
+    left: 40%;
+}
+
+.about-details .container .img img {
+    width: 300px;
+}
+
+.about-details .container p {
+    font-size: 2rem;
+    color: black;
+    line-height: 1.5;
+    margin: auto 60px;
+    margin-bottom: -40px;
+    /* padding: auto; */
+}
+
+.about-details .contactBTN {
+    display: flex;
+    border-radius: 5px;
+    background: yellow;
+    padding: 5px 10px;
+    font-size: 2rem;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.about-details .contactBTN:hover {
+    transform: scale(0.9);
+    transition: transform 0.2s ease-in;
+}
+
+.about-details a {
+    text-decoration: none;
+}
+
+.about-details .btn-container .btnBG {
     width: 60px;
     height: 60px;
     background: #ff6a00;
@@ -265,19 +342,185 @@ span {
     justify-content: center;
     align-items: center;
     position: fixed;
-    left: 50%;
+    left: 10px;
     top: 10px;
 }
 
-.details .container .btnBG:hover {
+.about-details .btn-container .btnBG:hover {
     transform: scale(1.4);
     cursor: pointer;
     top: 30px;
-    transition: transform 0.4s ease-out, top 0.4s ease-out;
+    left: 30px;
+    transition: transform 0.4s ease-out, top 0.4s ease-out, left 0.4s ease-out;
 }
 
 
 .fa-house {
     color: black;
     font-size: 1.6rem;
+}
+
+
+
+
+
+/* CONTACT */
+.contact {
+    background: radial-gradient(#FAD961, #F76B1C);
+}
+
+.contact .hero {
+    background: radial-gradient(#FAD961, #F76B1C);
+}
+
+.contact .container {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact form {
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.3);
+    background: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 13px;
+}
+
+.contact form h3 {
+    margin-bottom: 20px;
+    color: #555;
+    font-size: 3rem;
+    border-bottom: 3px solid #ff6a00;
+}
+
+.contact form input,
+.contact form textarea {
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: azure;
+    border-radius: 6px;
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+    font-family: monospace;
+}
+
+.contact form button {
+    padding: 10px 15px;
+    background: #ff6a00;
+    color: black;
+    font-size: 2rem;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 200px;
+    margin: 20px auto 0;
+    border-radius: 11px;
+}
+
+
+
+
+
+/* SERVICES */
+.service-body,
+.service-html {
+    background: whitespace;
+    color: black;
+}
+
+.service-body .service {
+    padding: 100px 0;
+}
+
+.service-body .max-width {
+    max-width: 1300px;
+    padding: 0 45px;
+    margin: auto;
+}
+
+.service-body .max-width h1 {
+    color: #ff6a00;
+    text-align: center;
+    position: relative;
+    font-size: 50px;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+.service-body .max-width h1::after {
+    content: "";
+    position: absolute;
+    width: 180px;
+    height: 3px;
+    background: #ff6a00;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.service-body .content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.service-body .card {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    padding: 50px 25px;
+    width: calc(26% - 20px);
+    border-radius: 6px;
+    background: white;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.service-body .card:hover {
+    background: #ff6a00;
+}
+
+.service-body .box {
+    transition: all 0.3 ease;
+}
+
+.service-body .card:hover .box {
+    transform: scale(1.05)
+}
+
+.service-body .box i {
+    font-size: 50px;
+    color: #ff6a00;
+    transition: color 0.3 ease;
+}
+
+.service-body .box h3 {
+    font-family: monospace;
+    color: black;
+    font-size: 25px;
+    padding: 20px 0 7px;
+    border-bottom: 3px solid #ff6a00;
+}
+
+.service-body .box p {
+    font-family: monospace;
+    font-size: 12px;
+    font-weight: 600;
+    color: black;
+    padding-top: 10px;
+}
+
+.service-body .card:hover .box i,
+.service-body .card:hover .box h3,
+.service-body .card:hover .box p {
+    color: azure;
+    border-color: azure;
 }
