--- a/css/style.css
+++ b/css/style.css
@@ -133,16 +133,19 @@ nav ul li a:hover {
     background: transparent;
 }
 
-.hero .navBG {
+.about-bg .navBG {
     box-shadow: 0 2px 6px #00000020;
-    background: azure;
     border-radius: 27px;
+    background: azure;
     margin-left: auto;
     margin-right: auto;
     width: 85%;
 }
 
 .navBG .nav {
+    border-radius: 27px;
+    background: azure;
+    box-shadow: 0 2px 6px #00000020;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -186,6 +189,7 @@ nav ul li a:hover {
 }
 
 .about-me .content {
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
     margin: 0;
     padding: 0;
     margin-top: 60px;
@@ -432,8 +436,13 @@ span {
 /* SERVICES */
 .service-body,
 .service-html {
-    background: whitespace;
     color: black;
+}
+
+.service-hero {
+    width: 100%;
+    height: 100vh;
+    background: url(..//assets/services_bg.png) center center/cover no-repeat;
 }
 
 .service-body .service {
