--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,6 @@ nav ul li a:hover {
 }
 
 .secondSection .about-img img {
-    /* background: #ff6a0030 center center/contain no-repeat; */
     width: auto;
     height: 550px;
     margin: 0;
@@ -190,7 +189,7 @@ nav ul li a:hover {
 }
 
 .secondSection .about-text .btn button {
-    background: #F8DE22;
+    background: seashell;
     letter-spacing: 4px;
     outline: none;
     border: none;
@@ -204,8 +203,7 @@ nav ul li a:hover {
 .secondSection .about-text .btn button:hover {
     transform: scale(1.03);
     transition: all 200ms ease-out;
-    background: hsla(0, 0%, 0%, 0.6);
-    color: #ff6a00;
+    color: black;
 }
 
 
@@ -311,6 +309,147 @@ nav ul li a:hover {
 .thirdSection .services .row button:hover p {
     color: azure;
     border-color: azure;
+}
+
+.fourthSection {
+    width: 100vw;
+    background: #ff6a00;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto 0;
+}
+
+.fourthSection .project {
+    display: flex;
+    width: 55%;
+    flex-direction: column;
+    margin: auto 30px;
+    padding: auto 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.fourthSection .project h2 {
+    font-size: 5rem;
+    font-family: graphik;
+    letter-spacing: 2px;
+    color: azure;
+    padding-bottom: 2px;
+    border-bottom: 3px solid azure;
+}
+
+.fourthSection .project p {
+    color: azure;
+    margin-top: 20px;
+    line-height: 1.4;
+    text-align: center;
+    font-family: monospace;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.fourthSection .project .proBTN {
+    background: seashell;
+    outline: none;
+    font-size: 2rem;
+    padding: 10px 20px;
+    letter-spacing: 3px;
+    border: none;
+    border-radius: 9px;
+}
+
+.fourthSection .project .proBTN:hover {
+    background-color: cornsilk;
+    transform: scale(1.19);
+    transition: transform 250ms linear;
+}
+
+.fourthSection .project a {
+    color: black;
+    text-decoration: none;
+}
+
+.footer {
+    width: 100vw;
+    height: 40vh;
+    background: whitesmoke;
+}
+
+.footer .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    height: 40vh;
+    margin: 30px 10px 0 10px;
+}
+
+.footer .footer-container .left {
+    width: 40vw;
+}
+
+.footer-container .left h1 {
+    color: #ff6a00;
+    padding: 10px;
+    margin: 20px;
+    font-size: 4.2rem;
+    font-family: monospace;
+}
+
+.footer-container .left p {
+    border-left: 3px solid black;
+    border-radius: 2px;
+    padding-left: 10px;
+    font-family: monospace;
+    font-size: 14px;
+    color: #333;
+    margin: 0 30px 20px;
+}
+
+.footer .footer-container .right {
+    display: flex;
+    flex-flow: column;
+    height: 25vh;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 30vw;
+    padding-left: 20px;
+}
+
+.right a {
+    text-decoration: none;
+    color: #222;
+}
+
+.right a:hover {
+    color: #777;
+}
+
+.footer-container .right .contactInfo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 25vh;
+    width: 30vw;
+}
+
+.right .contactInfo i {
+    color: #ff6a00;
+}
+
+.align {
+    color: #ff6a00;
+}
+
+.footer .bottom {
+    width: 100vw;
+    height: 7vh;
+    margin: 0 10px 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ABOUT */
