--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,51 @@ body {
     background: whitesmoke;
 }
 
+.scroll-indicator {
+    height: 5px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    border-radius: 5px;
+}
+
+.scroll-indicator .progress {
+    height: 100%;
+    width: 0;
+    border-radius: 5px;
+    background: yellow;
+    transition: width 0.1s;
+}
+
+.scroll-to-top {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    right: 20px;
+}
+
+.scroll-to-top a {
+    width: 25px;
+    height: 25px;
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 50%;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-color: black;
+    position: absolute;
+}
+
+.scroll-to-top a:hover {
+    color: chocolate;
+    border-color: chocolate;
+    transform: scale(1.3);
+    transition: transform 0.3s ease;
+}
+
 
 
 
@@ -58,7 +103,7 @@ nav ul li {
     margin: auto 20px;
 }
 
-nav ul li a {
+.link {
     text-transform: uppercase;
     text-decoration: none;
     color: black;
@@ -66,8 +111,12 @@ nav ul li a {
     font-size: 1.3rem;
 }
 
-nav ul li a:hover {
+.link:hover {
     color: red;
+}
+
+.link.active {
+    color: #ff6a00;
 }
 
 .detail {
@@ -154,7 +203,6 @@ nav ul li a:hover {
 }
 
 .secondSection .about-text .text {
-    /* background: #000; */
     height: 50vh;
     width: 80%;
     display: flex;
@@ -242,7 +290,6 @@ nav ul li a:hover {
     display: flex;
     flex-flow: row;
     justify-content: space-around;
-    /* background: #000; */
     align-items: center;
     width: 90vw;
 }
@@ -467,66 +514,19 @@ nav ul li a:hover {
 
 
 /* ABOUT */
+.about-html {
+    overflow: hidden;
+}
+
 .about-bg {
     background: radial-gradient(#FAD961, #F76B1C);
-    width: 100vw;
-    height: 80vh;
-    margin: 30px auto;
-    padding: 40px 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100vh;
+    justify-content: center
 }
 
 .about-bg .hero {
     background: transparent;
-}
-
-.about-bg .navBG {
-    box-shadow: 0 2px 6px #00000020;
-    border-radius: 27px;
-    background: azure;
-    margin-left: auto;
-    margin-right: auto;
-    width: 85%;
-}
-
-.navBG .nav {
-    border-radius: 27px;
-    background: azure;
-    box-shadow: 0 2px 6px #00000020;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: auto;
-    padding: 20px 0;
-    margin-bottom: 0;
-}
-
-.navBG .nav h2 {
-    font-family: graphik;
-    margin-left: 40px;
-    letter-spacing: 4px;
-    font-size: 2.6rem;
-}
-
-.navBG .nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: auto 20px;
-}
-
-.navBG .nav ul li a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-    font-size: 1.3rem;
-}
-
-.navBG .nav ul li a:hover {
-    color: red;
 }
 
 .about-me {
@@ -655,6 +655,8 @@ span {
 
 .about-details .container .img img {
     width: 300px;
+    border: 6px solid black;
+    border-radius: 50%;
 }
 
 .about-details .container p {
@@ -663,7 +665,10 @@ span {
     line-height: 1.5;
     margin: auto 60px;
     margin-bottom: -40px;
-    /* padding: auto; */
+}
+
+.contact-BTN {
+    height: 10vh;
 }
 
 .about-details .contactBTN {
@@ -688,6 +693,7 @@ span {
     text-decoration: none;
 }
 
+
 .about-details .btn-container .btnBG {
     width: 60px;
     height: 60px;
@@ -702,10 +708,10 @@ span {
 }
 
 .about-details .btn-container .btnBG:hover {
-    transform: scale(1.4);
+    transform: scale(1.3);
     cursor: pointer;
-    top: 30px;
-    left: 30px;
+    top: 20px;
+    left: 20px;
     transition: transform 0.4s ease-out, top 0.4s ease-out, left 0.4s ease-out;
 }
 
